# dev_log

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/config/settings/: base.py  production.py  staging.py
app/config/wsgi/: dev.py  production.py  staging.py
backend/: Dockerfile  requirements.txt
backend/app/config/: urls.py  views.py
backend/app/config/settings/: base.py  dev.py  dev_test.py  production.py
backend/app/core/: urls.py  views.py
backend/app/posts/: admin.py  models.py  serializers.py  tests.py  views.py
backend/app/posts/migrations/: 0001_initial.py
backend/app/templates/: base.html  index-dev.html  index.html
backend/app/templates/login_page/: index.html
backend/app/users/: admin.py  models.py  serializers.py  tests.py  views.py
backend/app/users/migrations/: 0001_initial.py
frontend/: .eslintrc.js  .gitignore  package-lock.json  package.json  vue.config.js  webpack-stats.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/api/common/: interceptors.js
frontend/src/components/: HelloWorld.vue
frontend/src/components/common/: AppHeader.vue
frontend/src/router/: index.js
frontend/src/views/: MainPage.vue
